6th - reports all recall data
Formats the recall date from IS) 8601 to DD-MMM-YYYY. Inserts accordion
code, but doesn't implement it.

--- a/ProductsApp.csproj
+++ b/ProductsApp.csproj
@@ -266,6 +266,8 @@
     <Content Include="App\app.js" />
     <Content Include="App\fakeSvc.js" />
     <Content Include="App\carSvc.js" />
+    <Content Include="App\LoadingService.js" />
+    <Content Include="App\parseJson.js" />
     <Content Include="App\planetsApp.js" />
     <Content Include="App\realSvc.js" />
     <Content Include="App\ui-router.js" />
@@ -316,7 +318,10 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="img\ajax-loader.gif" />
     <Content Include="mercury.html" />
+    <Content Include="Scripts\angular-spinner.js" />
+    <Content Include="Scripts\angular-spinner.min.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.min.js" />
     <Content Include="Scripts\angular-ui\ui-bootstrap.js" />
@@ -324,6 +329,9 @@
     <Content Include="App\carFrontEndCtrl.js" />
     <Content Include="Scripts\carModelNew.js" />
     <Content Include="Scripts\jquery.min.js" />
+    <Content Include="Scripts\spin.js" />
+    <Content Include="Scripts\spin.min.js" />
+    <Content Include="spinner.html" />
     <Content Include="trNgGrid-master\trNgGrid.css" />
     <Content Include="trNgGrid-master\trNgGrid.js" />
     <Content Include="trNgGrid-master\trNgGrid.min.css" />
@@ -1153,6 +1161,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="partials\route1.list.html" />
     <Content Include="partials\route2.list.html" />
+    <Content Include="Scripts\angular-spinner.min.js.map" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.2.0.js" />
     <Content Include="Scripts\jquery-2.2.0.min.js" />
