--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="Angular.UI.Bootstrap" version="1.1.0" targetFramework="net452" />
   <package id="Angular.UI.UI-Router" version="0.2.15" targetFramework="net452" />
   <package id="angularjs" version="1.4.8" targetFramework="net452" />
+  <package id="angular-spinner" version="0.8.0" targetFramework="net452" />
   <package id="Angular-UI-Router" version="0.2.8.0" targetFramework="net452" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.6" targetFramework="net452" />
@@ -49,6 +50,7 @@
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="Spin.js" version="2.0.1" targetFramework="net452" />
   <package id="WebApiTestClient" version="1.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
